hphp/hack/test/typecheck/is_expression/is_in_loop.php.like_types.exp
File "is_in_loop.php", line 12, characters 10-16:
Invalid return type (Typing[4110])
File "is_in_loop.php", line 8, characters 50-50:
Expected T
File "is_in_loop.php", line 12, characters 14-14:
But got B
File "is_in_loop.php", line 19, characters 26-26:
Some type constraint(s) here are violated (Typing[4323])
File "is_in_loop.php", line 3, characters 10-10:
'T' is a constrained type parameter
File "is_in_loop.php", line 3, characters 10-10:
Some type constraint(s) are violated here
File "is_in_loop.php", line 3, characters 10-10:
T is a constrained type parameter
File "is_in_loop.php", line 19, characters 28-28:
Expected A
File "is_in_loop.php", line 3, characters 10-10:
But got dynamic
File "is_in_loop.php", line 20, characters 12-13:
Invalid argument (Typing[4323])
File "is_in_loop.php", line 8, characters 20-20:
Some type constraint(s) are violated here
File "is_in_loop.php", line 8, characters 20-20:
T is a constrained type parameter
File "is_in_loop.php", line 15, characters 19-19:
Expected A
File "is_in_loop.php", line 8, characters 20-20:
But got dynamic
